kleine fehler + gui optimiert

--- a/src/main/resources/css/miniatur.css
+++ b/src/main/resources/css/miniatur.css
@@ -7,9 +7,9 @@
 #basevbox{
 
   -fx-background-color: black;
+   -fx-pref-width: 200em;
 }
 #title{
-
   -fx-text-fill: white;
   -fx-font-family: HP Simplified;
 }
