--- a/src/main/resources/css/fullscreen.css
+++ b/src/main/resources/css/fullscreen.css
@@ -14,3 +14,11 @@
  -fx-pref-width:100em;
  -fx-pref-height:100em;
 }
+
+#saveFilteredButton{
+
+   -fx-pref-width: 8em;
+   -fx-pref-height:4.5em;
+  -fx-text-fill: white;
+  -fx-font-family: HP Simplified;
+}
