--- a/src/main/resources/fxml/fullscreenFrame.fxml
+++ b/src/main/resources/fxml/fullscreenFrame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.FullScreenImageController">
+<GridPane fx:id="base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.FullScreenImageController">
   <columnConstraints>
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100.0" />
   </columnConstraints>
@@ -36,19 +36,19 @@
                <children>
                   <GridPane fx:id="planetop" style="-fx-background-color: rgba(50,50, 50, 0.5);">
                      <columnConstraints>
-                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="20.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="20.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="20.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="50.0" />
                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="10.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints percentHeight="100.0" valignment="TOP" vgrow="SOMETIMES" />
+                        <RowConstraints percentHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
                         <Button fx:id="button1" mnemonicParsing="false" onAction="#onDeletePressed" snapToPixel="false" style="-fx-background-image: url('/images/trashcan.png');" />
                         <Button fx:id="button11" mnemonicParsing="false" onAction="#onPrintPressed" style="-fx-background-image: url('/images/printer.png');" GridPane.columnIndex="1" />
                         <!--prefHeight="100.0" prefWidth="620.0"-->
-                     <Button fx:id="saveFilteredButton" mnemonicParsing="false" onAction="#saveFilteredImg" prefHeight="40.0" prefWidth="213.0" text="ALS NEUES FOTO SPEICHERN" textAlignment="CENTER" textFill="WHITE" visible="false" GridPane.columnIndex="2">
+                     <Button fx:id="saveFilteredButton" mnemonicParsing="false" onAction="#saveFilteredImg" prefHeight="40.0" prefWidth="213.0" text="neues Foto Speichern" textAlignment="CENTER" textFill="WHITE" visible="false" GridPane.columnIndex="2">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font></Button>
