[Issue #12355] -> Miniaturansicht bugs fixed

--- a/src/main/resources/css/miniatur.css
+++ b/src/main/resources/css/miniatur.css
@@ -2,12 +2,11 @@
   -fx-background-color: black;
 }
 #hbox{
-  -fx-background-color: black;
+  -fx-background-color: #222222;
 }
 #basevbox{
 
   -fx-background-color: black;
-   -fx-pref-width: 200em;
 }
 #title{
   -fx-text-fill: white;
