--- a/src/main/resources/fxml/greenscreenBackgroundFrame.fxml
+++ b/src/main/resources/fxml/greenscreenBackgroundFrame.fxml
@@ -2,20 +2,24 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <TitledPane fx:id="greenscreenBackground" animated="false" prefHeight="522.0" text="Greenscreen-&gt;Hintergrundverwaltung" GridPane.columnIndex="1" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenBackgroundFrameController">
 <content>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                 <children>
 
-                    <TableView fx:id="tableBackground" layoutY="0.0" prefHeight="420.0" >
+                    <TableView fx:id="tableBackground" layoutY="0.0" prefHeight="420.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                         <columns>
                             <TableColumn fx:id="colBackgroundID" prefWidth="44.74237585067749" text="ID" />
                             <TableColumn fx:id="colBackgroundName" prefWidth="189.813720703125" text="Name" />
@@ -24,10 +28,29 @@
 
                         </columns>
                     </TableView>
-                    <TextField fx:id="txBackgroundName" layoutX="51.0" layoutY="435.0" prefHeight="27.0" prefWidth="181.0" />
-                    <TextField fx:id="txBackgroundPath" editable="false" layoutX="242.0" layoutY="435.0" onAction="#backgroundUpload" onMouseClicked="#backgroundUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
-                    <Button layoutX="378.0" layoutY="435.0" mnemonicParsing="false" onAction="#saveBackground" text="ADD" />
-                    <Button layoutX="333.0" layoutY="433.0" mnemonicParsing="false" onAction="#backgroundUpload" prefHeight="30.0" text="+" />
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="430.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                          <TextField fx:id="txBackgroundName" prefHeight="27.0" prefWidth="181.0" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin></TextField>
+                          <TextField fx:id="txBackgroundPath" editable="false" onAction="#backgroundUpload" onMouseClicked="#backgroundUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin></TextField>
+                          <Button mnemonicParsing="false" onAction="#saveBackground" text="ADD" GridPane.columnIndex="3" />
+                          <Button mnemonicParsing="false" onAction="#backgroundUpload" prefHeight="30.0" text="+" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
                 </children>
             </AnchorPane>
         </content>
