--- a/src/main/resources/fxml/greenscreenCategoryFrame.fxml
+++ b/src/main/resources/fxml/greenscreenCategoryFrame.fxml
@@ -8,14 +8,19 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<TitledPane fx:id="greenscreenCategory" animated="false"  maxWidth="1.7976931348623157E308" prefHeight="522.0" text="Greenscreen-&gt;Kategorieverwaltung" GridPane.columnIndex="0" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
+<TitledPane fx:id="greenscreenCategory" animated="false" maxWidth="1.7976931348623157E308" prefHeight="522.0" text="Greenscreen-&gt;Kategorieverwaltung" GridPane.columnIndex="0" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
 <content>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                 <children>
 
-                    <TableView fx:id="tableCategory" layoutY="0.0" prefHeight="420.0">
+                    <TableView fx:id="tableCategory" layoutY="0.0" prefHeight="420.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                         <columns>
                             <TableColumn fx:id="colCategoryID" prefWidth="44.74237585067749" text="ID" />
                             <TableColumn fx:id="colCategoryName" prefWidth="271.0" text="Name" />
@@ -24,9 +29,22 @@
 
                         </columns>
                     </TableView>
-                    <TextField fx:id="txCategoryName" layoutX="51.0" layoutY="435.0" prefHeight="27.0" prefWidth="263.0" />
-                    <CheckBox fx:id="txCategoryActivated" layoutX="370.0" layoutY="439.0" mnemonicParsing="false" />
-                    <Button layoutX="470.0" layoutY="435.0" mnemonicParsing="false" onAction="#saveCategory" text="ADD" />
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="430.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                          <TextField fx:id="txCategoryName" prefHeight="27.0" prefWidth="263.0" GridPane.columnIndex="1" />
+                          <CheckBox fx:id="txCategoryActivated" mnemonicParsing="false" GridPane.columnIndex="2" />
+                          <Button mnemonicParsing="false" onAction="#saveCategory" text="ADD" GridPane.columnIndex="3" />
+               </children>
+            </GridPane>
                 </children>
             </AnchorPane>
         </content>
