--- a/src/main/resources/fxml/logoFrame.fxml
+++ b/src/main/resources/fxml/logoFrame.fxml
@@ -79,9 +79,9 @@
 
                         </children>
                     </GridPane>
-                    <ImageView fx:id="previewLogo" fitHeight="157.0" fitWidth="165.0" layoutX="820.0" layoutY="54.0" onMouseClicked="#fullScreenPreview" pickOnBounds="true" preserveRatio="true" />
-                    <TextField fx:id="txPreviewWidth" layoutX="820.0" layoutY="16.0" prefHeight="27.0" prefWidth="75.0" text="1024" />
-                    <TextField fx:id="txPreviewHeight" layoutX="910.0" layoutY="16.0" prefHeight="27.0" prefWidth="73.0" text="800" />
+                    <ImageView fx:id="previewLogo" fitHeight="157.0" fitWidth="165.0" onMouseClicked="#fullScreenPreview" pickOnBounds="true" preserveRatio="true"   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0"/>
+                    <TextField fx:id="txPreviewWidth" prefHeight="27.0" prefWidth="75.0" text="1024" AnchorPane.rightAnchor="90" AnchorPane.topAnchor="0.0" />
+                    <TextField fx:id="txPreviewHeight"  prefHeight="27.0" prefWidth="75.0" text="800" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0.0" />
                 </children>
             </AnchorPane>
         </content>
