--- a/src/main/resources/fxml/greenscreenBackgroundFrame.fxml
+++ b/src/main/resources/fxml/greenscreenBackgroundFrame.fxml
@@ -28,7 +28,7 @@
 
                         </columns>
                     </TableView>
-            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="430.0">
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="415.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,19 +36,19 @@
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                           <TextField fx:id="txBackgroundName" prefHeight="27.0" prefWidth="181.0" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                          <TextField fx:id="txBackgroundPath" editable="false" onAction="#backgroundUpload" onMouseClicked="#backgroundUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." GridPane.columnIndex="2">
+                          <TextField fx:id="txBackgroundPath" editable="false" onAction="#backgroundUpload" onMouseClicked="#backgroundUpload" visible="false" text="Hochladen..." GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                          <Button mnemonicParsing="false" onAction="#saveBackground" text="ADD" GridPane.columnIndex="3" />
-                          <Button mnemonicParsing="false" onAction="#backgroundUpload" prefHeight="30.0" text="+" GridPane.columnIndex="2" />
+                          <Button fx:id="txBackgroundAdd" mnemonicParsing="false" onAction="#saveBackground"  GridPane.columnIndex="3" />
+                          <Button fx:id="txBackgroundUpload" mnemonicParsing="false" onAction="#backgroundUpload"  GridPane.columnIndex="2" />
                </children>
             </GridPane>
                 </children>
