--- a/src/main/resources/fxml/greenscreenCategoryFrame.fxml
+++ b/src/main/resources/fxml/greenscreenCategoryFrame.fxml
@@ -29,7 +29,7 @@
 
                         </columns>
                     </TableView>
-            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="430.0">
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="415.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,12 +37,12 @@
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                           <TextField fx:id="txCategoryName" prefHeight="27.0" prefWidth="263.0" GridPane.columnIndex="1" />
                           <CheckBox fx:id="txCategoryActivated" mnemonicParsing="false" GridPane.columnIndex="2" />
-                          <Button mnemonicParsing="false" onAction="#saveCategory" text="ADD" GridPane.columnIndex="3" />
+                          <Button fx:id="txCategoryAdd" mnemonicParsing="false" onAction="#saveCategory"  GridPane.columnIndex="3" />
                </children>
             </GridPane>
                 </children>
