--- a/src/main/resources/fxml/logoFrame.fxml
+++ b/src/main/resources/fxml/logoFrame.fxml
@@ -33,7 +33,7 @@
                             <TableColumn fx:id="colLogoAktion" minWidth="0.0" prefWidth="67.089599609375" text="Aktion" />
                         </columns>
                     </TableView>
-                    <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="380.0">
+                    <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="365.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -41,12 +41,12 @@
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                         <children>
                             <AutoCompleteTextField fx:id="txLogoName" prefHeight="27" GridPane.columnIndex="1">
@@ -54,28 +54,28 @@
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></AutoCompleteTextField>
 
-                            <TextField fx:id="txLogoX" layoutX="234.0" layoutY="400.0" prefHeight="27.0" prefWidth="52" GridPane.columnIndex="2">
+                            <TextField fx:id="txLogoX" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                            <TextField fx:id="txLogoY" layoutX="290.0" layoutY="400.0" prefHeight="27.0" prefWidth="52" GridPane.columnIndex="3">
+                            <TextField fx:id="txLogoY" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                            <TextField fx:id="txLogoBreite" layoutX="350.0" layoutY="400.0" prefHeight="27.0" prefWidth="52.0" GridPane.columnIndex="4">
+                            <TextField fx:id="txLogoBreite"  GridPane.columnIndex="4">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                            <TextField fx:id="txLogoHoehe" layoutX="409.0" layoutY="400.0" prefHeight="27.0" prefWidth="52.0" GridPane.columnIndex="5">
+                            <TextField fx:id="txLogoHoehe"  GridPane.columnIndex="5">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                            <TextField fx:id="txLogoLogo" editable="false" layoutX="473.0" layoutY="400.0" onAction="#logoUpload" onMouseClicked="#logoUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." GridPane.columnIndex="6">
+                            <TextField fx:id="txLogoLogo" editable="false"  onAction="#logoUpload" onMouseClicked="#logoUpload" visible="false" text="Hochladen..." GridPane.columnIndex="6">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin></TextField>
-                            <Button layoutX="605.0" layoutY="400.0" mnemonicParsing="false" onAction="#saveLogo" text="ADD" GridPane.columnIndex="7" />
-                            <Button layoutX="564.0" layoutY="398.0" mnemonicParsing="false" onAction="#logoUpload" prefHeight="30.0" text="+" GridPane.columnIndex="6" />
+                            <Button fx:id="txLogoAdd" mnemonicParsing="false" onAction="#saveLogo"  GridPane.columnIndex="7" />
+                            <Button fx:id="txLogoUpload" mnemonicParsing="false" onAction="#logoUpload"  GridPane.columnIndex="6" />
 
                         </children>
                     </GridPane>
