--- a/src/main/resources/fxml/profileFrame.fxml
+++ b/src/main/resources/fxml/profileFrame.fxml
@@ -31,7 +31,7 @@
                     <TableColumn fx:id="colProfilAktion" minWidth="0.0" prefWidth="74.4259033203125" text="Aktion" />
                 </columns>
             </TableView>
-            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="430.0">
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="415.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,11 +39,11 @@
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="50.0" prefHeight="100.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <TextField fx:id="txProfilName" prefHeight="27.0" prefWidth="205.0" GridPane.columnIndex="1" />
@@ -51,9 +51,9 @@
                   <CheckBox fx:id="txProfilGreen" mnemonicParsing="false" GridPane.columnIndex="3" />
                   <CheckBox fx:id="txProfilFilter" mnemonicParsing="false" GridPane.columnIndex="4" />
                   <CheckBox fx:id="txProfilDrucken" mnemonicParsing="false" GridPane.columnIndex="5" />
-                  <TextField fx:id="txProfilWatermark" editable="false" onMouseClicked="#watermarkUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." GridPane.columnIndex="6" />
-                  <Button mnemonicParsing="false" onAction="#watermarkUpload" prefHeight="30.0" text="+" GridPane.columnIndex="6" />
-                  <Button mnemonicParsing="false" onAction="#saveProfil" text="ADD" GridPane.columnIndex="7" />
+                  <TextField fx:id="txProfilWatermark" editable="false" onMouseClicked="#watermarkUpload" visible="false" text="Hochladen..." GridPane.columnIndex="6" />
+                  <Button fx:id="txProfilUpload" mnemonicParsing="false" onAction="#watermarkUpload"  GridPane.columnIndex="6" />
+                  <Button fx:id="txProfilAdd" mnemonicParsing="false" onAction="#saveProfil" GridPane.columnIndex="7" />
                </children>
             </GridPane>
 
