--- a/src/main/resources/fxml/shotFrame.fxml
+++ b/src/main/resources/fxml/shotFrame.fxml
@@ -7,17 +7,17 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShotFrameController">
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShotFrameController">
    <center>
 
-      <ImageView fx:id="shotView" fitHeight="800.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fx:id="shotView"  pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@/images/noimage.png" />
          </image></ImageView>
 
    </center>
    <top>
-      <Label fx:id="countdownLabel" prefHeight="580.0"  text="Countdown" textFill="#e45252" visible="false" BorderPane.alignment="CENTER">
+      <Label fx:id="countdownLabel" prefHeight="580.0" text="Countdown" textFill="#e45252" visible="false" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="400.0" />
          </font>
