--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -12,6 +12,6 @@
 #edit{
    -fx-background-color: darkgray;
    -fx-text-fill: white;
-   -fx-font-family: HP Simplified;admad
+   -fx-font-family: HP Simplified;
    -fx-pref-height:2em;
 }
