--- a/src/main/resources/css/costumer.css
+++ b/src/main/resources/css/costumer.css
@@ -1,7 +1,7 @@
 #basicpane{
  -fx-background-repeat: no-repeat;
    -fx-background-position: center;
-   -fx-background-size: 100%;
+   -fx-background-size: cover;
    -fx-background-color: transparent;
    -fx-background-image: url('/images/studiogray.png');
 }
