[Issue #12228] -> Einstellungen->KameraPosition Tabelle um Greenscreen Spalte erweitert und editable möglichkeit hinzugefügt.

--- a/src/main/resources/fxml/cameraPositionFrame.fxml
+++ b/src/main/resources/fxml/cameraPositionFrame.fxml
@@ -17,7 +17,7 @@
                     <TableColumn fx:id="colKamPosKamera"  text="Kamera" />
                     <TableColumn fx:id="colKamPosActivated"  text="Aktiviert" />
                     <TableColumn fx:id="colKamPosPosition" text="Position" />
-                    <!--<TableColumn fx:id="colKamPosGreenscreen" text="Greenscreen" />-->
+                    <TableColumn fx:id="colKamPosGreenscreen" text="Greenscreen" />
                 </columns>
             </TableView>
         </children>
