--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,16 +1,23 @@
 .root{
-  -fx-background-color: dimgray;
 
+  -fx-background-color: dimgray;
+}
+#base{
+  -fx-background-color: dimgray;
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center;
+   -fx-background-size: 100%;
+   -fx-background-image: url('/images/logo.png');
 }
 #startbutton {
-   -fx-background-color: darkgray;
+   -fx-background-color:  rgba(40,40, 40, 0.5);
    -fx-text-fill: white;
    -fx-font-family: HP Simplified;
    -fx-pref-height:2em;
    }
 
 #edit{
-   -fx-background-color: darkgray;
+   -fx-background-color:  rgba(40,40, 40, 0.5);
    -fx-text-fill: white;
    -fx-font-family: HP Simplified;
    -fx-pref-height:2em;
