--- a/src/main/resources/fxml/greenscreenCategoryFrame.fxml
+++ b/src/main/resources/fxml/greenscreenCategoryFrame.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<TitledPane fx:id="greenscreenCategory" animated="false" maxWidth="1.7976931348623157E308" prefHeight="522.0" text="Greenscreen-&gt;Kategorieverwaltung" GridPane.columnIndex="0" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
+<TitledPane fx:id="greenscreenCategory" animated="false" maxWidth="1.7976931348623157E308" prefHeight="522.0" stylesheets="@../css/profilesetting.css" text="Greenscreen-&gt;Kategorieverwaltung" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
 <content>
-            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" style="-fx-background-color: rgb(180,180,180,1);">
                 <children>
 
                     <TableView fx:id="tableCategory" layoutY="0.0" prefHeight="420.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -42,7 +42,7 @@
                <children>
                           <TextField fx:id="txCategoryName" prefHeight="27.0" prefWidth="263.0" GridPane.columnIndex="1" />
                           <CheckBox fx:id="txCategoryActivated" mnemonicParsing="false" GridPane.columnIndex="2" />
-                          <Button fx:id="txCategoryAdd" mnemonicParsing="false" onAction="#saveCategory"  GridPane.columnIndex="3" />
+                          <Button fx:id="txCategoryAdd" mnemonicParsing="false" onAction="#saveCategory" GridPane.columnIndex="3" />
                </children>
             </GridPane>
                 </children>
