--- a/src/main/resources/css/basicstyle.css
+++ b/src/main/resources/css/basicstyle.css
@@ -1,8 +1,13 @@
 .root{
-  -fx-background-color: dimgray;
+  -fx-background-color: rgb(130,130,130,1);
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center;
+   -fx-background-size: 100%;
+   -fx-background-image: url('/images/logograyultra.png');
+
 }
 .button {
--fx-background-color: darkgray;
+-fx-background-color: rgb(80,80,80,0.8);
    -fx-text-fill: white;
    -fx-font-family: HP Simplified;
    -fx-pref-width: 15em;
@@ -16,11 +21,11 @@
   -fx-text-fill: red;
 }
 #profileChoiceBox{
-  -fx-background-color: darkgray;
+  -fx-background-color: rgb(80,80,80,0.8);
   -fx-pref-width: 30em;
   -fx-mark-color: green ;
 }
 
 .choice-box .context-menu {
-    -fx-background-color: darkgray ;
+    -fx-background-color: rgb(80,80,80,0.8);
 }
