--- a/src/main/resources/fxml/cameraPositionFrame.fxml
+++ b/src/main/resources/fxml/cameraPositionFrame.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 
-<TitledPane fx:id="kampos" animated="false" prefHeight="717.0" text="Kamera-Position Zuweisung" GridPane.columnIndex="1" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.CameraPositionFrameController">
+<TitledPane fx:id="kampos" animated="false" prefHeight="717.0" style="-fx-background-color: rgb(130,130,130,1);" stylesheets="@../css/profilesetting.css" text="Kamera-Position Zuweisung" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.CameraPositionFrameController">
 
 <content>
-    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" style="-fx-background-color: rgb(180,180,180,1);">
         <children>
             <TableView fx:id="tableKamPos" prefHeight="405.0" prefWidth="453.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <columnResizePolicy>
                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                 </columnResizePolicy>
                 <columns>
-                    <TableColumn fx:id="colKamPosKamera"  text="Kamera" />
-                    <TableColumn fx:id="colKamPosActivated"  text="Aktiviert" />
+                    <TableColumn fx:id="colKamPosKamera" text="Kamera" />
+                    <TableColumn fx:id="colKamPosActivated" text="Aktiviert" />
                     <TableColumn fx:id="colKamPosPosition" text="Position" />
                     <TableColumn fx:id="colKamPosGreenscreen" text="Greenscreen" />
                 </columns>
