--- a/src/main/resources/fxml/logoFrame.fxml
+++ b/src/main/resources/fxml/logoFrame.fxml
@@ -15,7 +15,7 @@
 <?import at.ac.tuwien.sepm.ws16.qse01.gui.specialCells.AutoCompleteTextField?>
 <TitledPane fx:id="logo" animated="false" prefHeight="522.0" text="Logoverwaltung" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LogoFrameController">
         <content>
-            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+            <AnchorPane  maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" style="-fx-background-color: rgb(180,180,180,1);">
                 <children>
 
                     <TableView fx:id="tableLogo" prefHeight="405.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
