--- a/src/main/resources/fxml/shootingFrame.fxml
+++ b/src/main/resources/fxml/shootingFrame.fxml
@@ -8,79 +8,91 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="gridbase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
+<GridPane fx:id="gridbase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
-      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="20.0" />
-      <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="60.0" />
-    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
+      <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="90.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-      <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-    <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-    <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="80.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="canclebutton" mnemonicParsing="false" onAction="#onDemolitionPressed" text="Abbrechen" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <ChoiceBox fx:id="profileChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      <Label text="Profil:" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <font>
-            <Font name="HP Simplified" size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="saveing" text="Speicherort:" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <font>
-            <Font name="HP Simplified" size="16.0" />
-         </font>
-      </Label>
-      <GridPane fx:id="gridSave" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="50.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="50.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="100.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="storage" mnemonicParsing="false" onAction="#onChooseStorageDirPressed" text="Speicherort wählen" textFill="WHITE" />
-            <Label fx:id="storageDirLabel" GridPane.columnIndex="1">
+            <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStartShootingPressed" text="Start" textFill="WHITE" GridPane.columnIndex="1" />
+            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStopShootingPressed" text="Shooting Beenden" textFill="WHITE" GridPane.columnIndex="1" />
+            <Button fx:id="canclebutton" mnemonicParsing="false" onAction="#onDemolitionPressed" text="Abbrechen" textFill="WHITE" />
+         </children>
+      </GridPane>
+      <GridPane GridPane.columnIndex="1">
+        <columnConstraints>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="35.0" />
+          <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="60.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="25.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Profil:" textFill="WHITE" GridPane.rowIndex="1">
                <font>
                   <Font name="HP Simplified" size="16.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="profileChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label fx:id="saveing" text="Speicherort:" textFill="WHITE" GridPane.rowIndex="2">
+               <font>
+                  <Font name="HP Simplified" size="16.0" />
+               </font>
+            </Label>
+            <GridPane fx:id="gridSave" prefHeight="52.0" prefWidth="360.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="37.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.5" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="60.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints percentHeight="100.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="storage" mnemonicParsing="false" onAction="#onChooseStorageDirPressed" text="Speicherort wählen" textFill="WHITE" />
+                  <Label fx:id="storageDirLabel" GridPane.columnIndex="2">
+                     <font>
+                        <Font name="HP Simplified" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="2" GridPane.rowIndex="3">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="37.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.5" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="60.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints percentHeight="100.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="bgStorage" mnemonicParsing="false" onAction="#onChooseBgStorageDirPressed" text="Speicherort wählen" textFill="WHITE" />
+                  <Label fx:id="bgStorageDirLabel" text="Keine Hintergründe definiert" textFill="WHITE" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <Label text="Userdefinierte Hintergründe:" textFill="WHITE" GridPane.rowIndex="3" />
+            <Label fx:id="finallsavingplace" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <GridPane GridPane.columnIndex="2" GridPane.rowIndex="5">
-        <columnConstraints>
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints percentHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStartShootingPressed" text="Start" textFill="WHITE" />
-            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStopShootingPressed" text="Shooting Beenden" textFill="WHITE" />
-         </children>
-      </GridPane>
-      <Label fx:id="save1" text="Speicherort:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label fx:id="finallsavingplace" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="bgStorage" mnemonicParsing="false" onAction="#onChooseBgStorageDirPressed" text="Speicherort wählen" textFill="WHITE" />
-            <Label fx:id="bgStorageDirLabel" text="Keine Hintergründe definiert" textFill="WHITE" GridPane.columnIndex="1" />
-         </children>
-      </GridPane>
-      <Label text="Userdefinierte Hintergründe:" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
