imported cameraposition images and updated sql

--- a/src/main/resources/css/basicstyle.css
+++ b/src/main/resources/css/basicstyle.css
@@ -17,6 +17,9 @@
   -fx-text-fill: white;
   -fx-font-family: HP Simplified;
 }
+#title{
+ -fx-font-size: 2em;
+}
 #wrongCredentialsLabel{
   -fx-text-fill: red;
 }
