--- a/src/main/resources/css/customer.css
+++ b/src/main/resources/css/customer.css
@@ -15,6 +15,7 @@
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
    -fx-background-size: 100%;
+   -fx-background-color: transparent;
    }
 #allpicturesview{
 
